<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application Strings -->
    <string name="app_name">All In One</string>
    
    <!-- Feature Detection Strings -->
    <string name="action_matching">Matching</string>
    <string name="action_keypoints">Keypoints</string>
    <string name="action_facedetection">Face Detect</string>
    
    <!-- Compass Strings -->
    <string name="action_show_compass">Compass On</string>
    <string name="action_hide_compass">Compass Off</string>

    <!-- Camera Filter Strings -->
    <string name="rgb_button">RGB</string>
    <string name="posterize_button">Posterize</string>
    <string name="pixelize_button">Pixelize</string>
    <string name="sepia_button">Sepia</string>
    <string name="cannyedge_button">Canny</string>
    
    <!--  MainActivity Strings -->
    <string name="action_camera">Take Picture</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="preview_resolution">Preview Resolution</string>
    <string name="picture_resolution">Picture Resolution</string>
    
    <!-- PictureActivity Strings -->
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_share">Share</string>
    <string name="pictureview_desc">Picture</string>
    <string name="photo_delete_prompt_title">Delete Photo</string>
    <string name="photo_delete_prompt_message">Are you sure you want to delete this photo?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="photo_edit_chooser_title">Edit Photo with..</string>
    <string name="photo_send_extra_subject">Photo Subject</string>
    <string name="photo_send_extra_text">Photo Text</string>
    <string name="photo_send_chooser_title">Share Photo with..</string>
</resources>
