<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.cameraproject.MainActivity" >
    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->
    <com.project.cameratoolsapp.PreviewView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
        android:id="@+id/cameraPreviewView"
        opencv:show_fps="true"
        opencv:camera_id="any" />
	<!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->
   	<FrameLayout
   	    android:layout_width="match_parent"
   	    android:layout_height="match_parent"
        android:fitsSystemWindows="true" >
        
   	    <RelativeLayout 
		    android:layout_width="match_parent"
		    android:layout_height="match_parent" >

		    <ImageView
		        android:id="@+id/imageViewCompass"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:visibility="invisible"
		        android:src="@drawable/compass" />

		    <TextView
		        android:id="@+id/textViewHeading"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_above="@+id/imageViewCompass"
		        android:visibility="invisible"
		        android:layout_alignParentLeft="true"
		        android:text="Heading: 0.0" />
		</RelativeLayout>
   	    
        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >
            <Button
                android:id="@+id/rgb_button"
                style="?buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rgb_button" />
            <Button
                android:id="@+id/cannyedge_button"
                style="?buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cannyedge_button" />
            <Button
                android:id="@+id/posterize_button"
                style="?buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/posterize_button" />
            <Button
                android:id="@+id/pixelize_button"
                style="?buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pixelize_button" />
            <Button
                android:id="@+id/sepia_button"
                style="?buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sepia_button" />

        </LinearLayout>
    </FrameLayout>
</FrameLayout>